Update CI and Property files

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,10 +23,10 @@ jobs:
         uses: christian-draeger/write-properties@1.1.0
         with:
           path: './src/test/resources/properties/config.properties'
-          property: |
+          property:
             'api.key'
-          value: |
-            ${{ secrets.API_KEY }}
+          value:
+            '${{ secrets.API_KEY }}'
 
       - name: Build with Maven and run tests
         run: mvn test
